Add React auction drop page
